# decision-intelligence-assistant

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  schemas.py
backend/app/: config.py  llm.py  main.py  models.py
backend/app/prompts/: grounded_answer.py
backend/app/rag/: chunker.py  embedder.py  loader.py  store.py
backend/app/routers/: admin.py  ai.py  keyword.py  search.py
backend/models/: evaluation_report.csv  model_metrics.csv  priority_model.joblib
backend/scripts/: clean_data.py  evaluate.py  ingest_to_chroma.py  train_baseline.py
backend/services/: llm_service.py  logging_service.py  ml_service.py  vector_service.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
logs/: query_history.jsonl  system_errors.jsonl
notebooks/: 01_eda_cleaning.ipynb  02_model_training.ipynb  03_vector_store.ipynb  data_prep.ipynb  pyproject.toml
notebooks/.ipynb_checkpoints/: notebook-checkpoint.ipynb
presentation/: presentation.html
