[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "langchain-community>=0.4.1",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.44.0",
]
