[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charbel Ghanem", email = "ghanemcharbel219@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "qdrant-client>=1.17.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"
